--- a/src/i18n/locales/en/settings.json
+++ b/src/i18n/locales/en/settings.json
@@ -229,7 +229,13 @@
       "typography": "Typography",
       "font": "Font",
       "fontSize": "Size",
-      "preview": "Preview"
+      "preview": "Preview",
+      "iconTheme": "Icon Theme",
+      "iconThemeDescription": "Select the style of the action bar icons",
+      "selectIconTheme": "Select theme",
+      "localTerminal": "Local Terminal",
+      "showLocalTerminal": "Show local terminal on startup",
+      "showLocalTerminalDescription": "Controls whether the local terminal is shown or hidden when opening the home page"
     }
   },
   "rdp": {
