added export options

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -117,6 +117,9 @@
   "appMenu": {
     "file": "File",
     "import": "Import",
+    "importMremote": "Import mRemoteNG/KeePass",
+    "importNodeterm": "Import NodeTerm (.nodeterm)",
+    "export": "Export",
     "view": "View",
     "reload": "Reload",
     "forceReload": "Force reload",
@@ -132,6 +135,96 @@
     "exit": "Exit",
     "exitConfirm": "Are you sure you want to exit NodeTerm?",
     "updateNow": "Update now"
+  },
+  "export": {
+    "title": "Export NodeTerm Data",
+    "export": "Export",
+    "selectData": "📦 Select data to export",
+    "connections": "SSH/RDP/VNC Connections",
+    "connectionsDesc": "Connection tree, favorites, and import sources",
+    "passwords": "Password Manager",
+    "passwordsDesc": "Encrypted passwords and folder structure",
+    "conversations": "AI Conversations",
+    "conversationsDesc": "Conversation history and backups",
+    "config": "Configurations",
+    "configDesc": "Themes, fonts, default terminal, MCPs, etc.",
+    "recordings": "Recordings (metadata)",
+    "recordingsDesc": "Recording information only, not full content",
+    "fileName": "📄 File name",
+    "useEncryption": "🔒 Protect with additional password",
+    "encryptionNote": "AES-256-GCM encryption (recommended)",
+    "password": "Password",
+    "passwordPlaceholder": "Minimum 8 characters",
+    "confirmPassword": "Confirm password",
+    "confirmPasswordPlaceholder": "Repeat password",
+    "passwordsDoNotMatch": "⚠️ Passwords don't match",
+    "estimatedSize": "Estimated size",
+    "securityNote": "Master key is NOT exported for security. Only encrypted data is exported.",
+    "preparing": "Preparing data...",
+    "exporting": "Exporting...",
+    "generating": "Generating file...",
+    "downloading": "Downloading...",
+    "completed": "✓ Completed",
+    "success": "Export successful",
+    "fileDownloaded": "File downloaded successfully",
+    "error": "Error",
+    "errorMessage": "Error exporting data",
+    "warning": "Warning",
+    "selectAtLeastOne": "Select at least one category to export",
+    "passwordMismatch": "Passwords don't match or are too short (minimum 8 characters)"
+  },
+  "import": {
+    "title": "Import NodeTerm Data",
+    "import": "Import",
+    "chooseFile": "📁 Choose .nodeterm file",
+    "supportedFormats": "Supported formats: .nodeterm, .json (max 50 MB)",
+    "fileInfo": "📄 File information",
+    "version": "Version",
+    "exportedAt": "Exported",
+    "appVersion": "App",
+    "size": "Size",
+    "content": "📦 Content",
+    "connections": "connections",
+    "passwords": "passwords",
+    "conversations": "conversations",
+    "configItems": "configs",
+    "recordings": "recordings",
+    "encryptedFile": "🔒 Encrypted file - Enter password to view content",
+    "enterPassword": "🔑 Decryption password",
+    "passwordPlaceholder": "Enter password",
+    "decrypt": "Decrypt",
+    "decrypted": "File decrypted successfully",
+    "importMode": "🔄 Import mode",
+    "merge": "Merge with existing data",
+    "mergeDesc": "New data is added without removing existing data",
+    "replace": "⚠️ Replace existing data",
+    "replaceDesc": "ALL current data will be deleted (automatic backup created)",
+    "replaceWarning": "⚠️ WARNING: An automatic backup will be created before replacing data. You can restore it if needed.",
+    "selectCategories": "📦 Select categories to import",
+    "validating": "Validating file...",
+    "importing": "Importing data...",
+    "finalizing": "Finalizing...",
+    "completed": "✓ Completed",
+    "success": "Import successful",
+    "imported": "Imported",
+    "error": "Error",
+    "invalidFileType": "Only .nodeterm or .json files are allowed",
+    "invalidFile": "Invalid or corrupt file",
+    "warning": "Warning",
+    "enterPasswordWarning": "Enter password",
+    "wrongPassword": "Incorrect password",
+    "confirmReplace": "⚠️ ALL existing data will be REPLACED. This action CANNOT be undone. Continue?",
+    "confirmMerge": "Merge this data with existing data?",
+    "confirmation": "Confirmation",
+    "selectAtLeastOne": "Select at least one category to import",
+    "reloadRequired": "Reload application to apply changes?",
+    "errorMessage": "Error importing data",
+    "clearFile": "Clear file"
+  },
+  "common": {
+    "yes": "Yes",
+    "no": "No",
+    "cancel": "Cancel"
   },
   "homeTab": {
     "new": "New",
