--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -117,6 +117,9 @@
   "appMenu": {
     "file": "Archivo",
     "import": "Importar",
+    "importMremote": "Importar mRemoteNG/KeePass",
+    "importNodeterm": "Importar NodeTerm (.nodeterm)",
+    "export": "Exportar",
     "view": "Ver",
     "reload": "Recargar",
     "forceReload": "Forzar recarga",
@@ -132,6 +135,96 @@
     "exit": "Salir",
     "exitConfirm": "¿Estás seguro de que quieres salir de NodeTerm?",
     "updateNow": "Actualizar ahora"
+  },
+  "export": {
+    "title": "Exportar Datos de NodeTerm",
+    "export": "Exportar",
+    "selectData": "📦 Seleccionar datos a exportar",
+    "connections": "Conexiones SSH/RDP/VNC",
+    "connectionsDesc": "Árbol de conexiones, favoritos y fuentes de importación",
+    "passwords": "Gestor de Contraseñas",
+    "passwordsDesc": "Contraseñas encriptadas y estructura de carpetas",
+    "conversations": "Conversaciones de IA",
+    "conversationsDesc": "Historial de conversaciones y backups",
+    "config": "Configuraciones",
+    "configDesc": "Temas, fuentes, terminal por defecto, MCPs, etc.",
+    "recordings": "Grabaciones (metadata)",
+    "recordingsDesc": "Solo información de grabaciones, no el contenido completo",
+    "fileName": "📄 Nombre del archivo",
+    "useEncryption": "🔒 Proteger con contraseña adicional",
+    "encryptionNote": "Encriptación AES-256-GCM (recomendado)",
+    "password": "Contraseña",
+    "passwordPlaceholder": "Mínimo 8 caracteres",
+    "confirmPassword": "Confirmar contraseña",
+    "confirmPasswordPlaceholder": "Repetir contraseña",
+    "passwordsDoNotMatch": "⚠️ Las contraseñas no coinciden",
+    "estimatedSize": "Tamaño estimado",
+    "securityNote": "La master key NO se exporta por seguridad. Solo se exportan datos encriptados.",
+    "preparing": "Preparando datos...",
+    "exporting": "Exportando...",
+    "generating": "Generando archivo...",
+    "downloading": "Descargando...",
+    "completed": "✓ Completado",
+    "success": "Exportación exitosa",
+    "fileDownloaded": "Archivo descargado correctamente",
+    "error": "Error",
+    "errorMessage": "Error al exportar los datos",
+    "warning": "Advertencia",
+    "selectAtLeastOne": "Selecciona al menos una categoría para exportar",
+    "passwordMismatch": "Las contraseñas no coinciden o son muy cortas (mínimo 8 caracteres)"
+  },
+  "import": {
+    "title": "Importar Datos de NodeTerm",
+    "import": "Importar",
+    "chooseFile": "📁 Seleccionar archivo .nodeterm",
+    "supportedFormats": "Formatos soportados: .nodeterm, .json (máx. 50 MB)",
+    "fileInfo": "📄 Información del archivo",
+    "version": "Versión",
+    "exportedAt": "Exportado",
+    "appVersion": "App",
+    "size": "Tamaño",
+    "content": "📦 Contenido",
+    "connections": "conexiones",
+    "passwords": "contraseñas",
+    "conversations": "conversaciones",
+    "configItems": "configs",
+    "recordings": "grabaciones",
+    "encryptedFile": "🔒 Archivo encriptado - Ingresa la contraseña para ver el contenido",
+    "enterPassword": "🔑 Contraseña de desencriptación",
+    "passwordPlaceholder": "Ingresa la contraseña",
+    "decrypt": "Desencriptar",
+    "decrypted": "Archivo desencriptado correctamente",
+    "importMode": "🔄 Modo de importación",
+    "merge": "Fusionar con datos existentes",
+    "mergeDesc": "Los datos nuevos se añaden sin eliminar los existentes",
+    "replace": "⚠️ Reemplazar datos existentes",
+    "replaceDesc": "Se eliminarán TODOS los datos actuales (se crea backup automático)",
+    "replaceWarning": "⚠️ ADVERTENCIA: Se creará un backup automático antes de reemplazar los datos. Podrás restaurarlo si es necesario.",
+    "selectCategories": "📦 Seleccionar categorías a importar",
+    "validating": "Validando archivo...",
+    "importing": "Importando datos...",
+    "finalizing": "Finalizando...",
+    "completed": "✓ Completado",
+    "success": "Importación exitosa",
+    "imported": "Importado",
+    "error": "Error",
+    "invalidFileType": "Solo se permiten archivos .nodeterm o .json",
+    "invalidFile": "Archivo inválido o corrupto",
+    "warning": "Advertencia",
+    "enterPasswordWarning": "Ingresa la contraseña",
+    "wrongPassword": "Contraseña incorrecta",
+    "confirmReplace": "⚠️ Se REEMPLAZARÁN todos los datos existentes. Esta acción NO se puede deshacer. ¿Continuar?",
+    "confirmMerge": "¿Fusionar estos datos con los existentes?",
+    "confirmation": "Confirmación",
+    "selectAtLeastOne": "Selecciona al menos una categoría para importar",
+    "reloadRequired": "¿Recargar la aplicación para aplicar los cambios?",
+    "errorMessage": "Error al importar los datos",
+    "clearFile": "Limpiar archivo"
+  },
+  "common": {
+    "yes": "Sí",
+    "no": "No",
+    "cancel": "Cancelar"
   },
   "homeTab": {
     "new": "Nuevo",
