--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -219,7 +219,12 @@
     "selectAtLeastOne": "Select at least one category to import",
     "reloadRequired": "Reload application to apply changes?",
     "errorMessage": "Error importing data",
-    "clearFile": "Clear file"
+    "clearFile": "Clear file",
+    "masterKeyNote": "🔑 Note: Encrypted data (passwords/connections) are imported as-is. You'll need the same Master Key from the source system to decrypt them. If you don't have the Master Key, that data won't be accessible.",
+    "loading": "Loading...",
+    "readingFile": "Reading file...",
+    "fileReadError": "Error reading file. Verify the file is not corrupted.",
+    "noFileSelected": "Could not get the selected file. Please try selecting it again."
   },
   "common": {
     "yes": "Yes",
