added export options v2.1 funciona el flujo pero no las carga

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -221,6 +221,11 @@
     "errorMessage": "Error importing data",
     "clearFile": "Clear file",
     "masterKeyNote": "🔑 Note: Encrypted data (passwords/connections) are imported as-is. You'll need the same Master Key from the source system to decrypt them. If you don't have the Master Key, that data won't be accessible.",
+    "masterKeyRequired": "🔒 This file contains encrypted data (passwords/connections). Enter the Master Key to view the full content and import.",
+    "enterMasterKey": "🔑 Master Key",
+    "masterKeyPlaceholder": "Enter the Master Key from the source system",
+    "decryptedWithMasterKey": "Data decrypted successfully with Master Key",
+    "wrongMasterKey": "Incorrect Master Key",
     "loading": "Loading...",
     "readingFile": "Reading file...",
     "fileReadError": "Error reading file. Verify the file is not corrupted.",
