--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -221,6 +221,11 @@
     "errorMessage": "Error al importar los datos",
     "clearFile": "Limpiar archivo",
     "masterKeyNote": "🔑 Nota: Los datos encriptados (contraseñas/conexiones) se importan tal cual. Necesitarás la misma Master Key del sistema origen para desencriptarlos. Si no tienes la Master Key, esos datos no serán accesibles.",
+    "masterKeyRequired": "🔒 Este archivo contiene datos encriptados (contraseñas/conexiones). Ingresa la Master Key para ver el contenido completo y poder importar.",
+    "enterMasterKey": "🔑 Master Key",
+    "masterKeyPlaceholder": "Ingresa la Master Key del sistema origen",
+    "decryptedWithMasterKey": "Datos desencriptados correctamente con Master Key",
+    "wrongMasterKey": "Master Key incorrecta",
     "loading": "Cargando...",
     "readingFile": "Leyendo archivo...",
     "fileReadError": "Error al leer el archivo. Verifica que el archivo no esté corrupto.",
