Add instalar automaticamente

--- a/src/i18n/locales/en/settings.json
+++ b/src/i18n/locales/en/settings.json
@@ -200,6 +200,8 @@
     "autoCheckDisabled": "Automatic check disabled",
     "autoDownloadEnabled": "Automatic download enabled",
     "autoDownloadDisabled": "Automatic download disabled",
+    "autoInstallEnabled": "Automatic install enabled",
+    "autoInstallDisabled": "Automatic install disabled",
     "download": "Download Update",
     "install": "Install and Restart",
     "retry": "Retry"
