--- a/src/i18n/locales/en/dialogs.json
+++ b/src/i18n/locales/en/dialogs.json
@@ -311,7 +311,7 @@
   },
   "group": {
     "title": {
-      "new": "New tab group",
+      "new": "New group",
       "edit": "Edit Group"
     },
     "fields": {
