--- a/src/i18n/locales/es/dialogs.json
+++ b/src/i18n/locales/es/dialogs.json
@@ -311,7 +311,7 @@
   },
   "group": {
     "title": {
-      "new": "Nuevo grupo de pestañas",
+      "new": "Nuevo grupo",
       "edit": "Editar grupo"
     },
     "fields": {
